--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 body {
   padding: 0;
   margin: 0;
+  background: linear-gradient(#6446da, #4564da);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
   'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
   sans-serif;
